--- a/env/flask_app/templates/consultexp.html
+++ b/env/flask_app/templates/consultexp.html
@@ -90,9 +90,9 @@
             var obj = {},
             key1 = "mail",
             key2 = "statut",
-            $td = $(this).find('td'),
+            $td = $(this).find('button[type=submit][id=mail]'),
             $input = $(this).find('input[type=number][id=statut]')
-            val1 = $td.eq(0).text(),
+            val1 = $td.text(),
             val2 = $input.val(),
             obj[key1] = val1;
             obj[key2] = val2;
@@ -100,7 +100,7 @@
         });
         console.log(tab)
         jQuery.ajax({
-            url: '/consultexp',
+            url: '/api/modifexp',
             type: "POST",
             data: JSON.stringify({ paramName: tab }),
             success: function(msg) {
