--- a/env/flask_app/templates/login.html
+++ b/env/flask_app/templates/login.html
@@ -13,9 +13,9 @@
 <br>
 <form action="#" method="post" name="form">
     <div class="form-group row">
-        <label for="identifiant" class="col-sm-2 col-form-label">{{ _("Pseudo") }}</label>
+        <label for="mail" class="col-sm-2 col-form-label">{{ _("Mail") }}</label>
         <div class="col-sm-10">
-            <input type="text" name="identifiant" class="form-control" placeholder=" {{ _("Entrer votre pseudo") }}"/>
+            <input type="text" name="mail" class="form-control" placeholder=" {{ _("Entrer votre mail") }}"/>
         </div>
     </div>
     <br> 
