--- a/env/flask_app/templates/consultmails.html
+++ b/env/flask_app/templates/consultmails.html
@@ -27,7 +27,7 @@
 <i class="fa fa-info-circle" aria-hidden="true"></i>{{ _("Statut : 1 valide, 2 refuse, 3 en attente") }}
 <br>
 
-<p>{{ _("Liste de mails de") }} {{identifiant}}</p>
+<p>{{ _("Liste de mails de") }} {{mail}}</p>
 
 <form action="#" method="post" name="form">
     <table class="table table-striped" id='table' name='table'>
