--- a/env/flask_app/templates/consultexp.html
+++ b/env/flask_app/templates/consultexp.html
@@ -10,7 +10,7 @@
 {% endif %}
 {% endwith %}
 
-<p>{{ _("Liste d'expéditeurs de ") }} {{identifiant}}</p>
+<p>{{ _("Liste d'expéditeurs de ") }} {{mail}}</p>
 
 <i class="fa fa-info-circle" aria-hidden="true"></i>{{ _("Statut : 1 valide, 2 refuse, 3 en attente") }}
 <br>
