--- a/env/flask_app/templates/login.html
+++ b/env/flask_app/templates/login.html
@@ -15,7 +15,7 @@
     <div class="form-group row">
         <label for="mail" class="col-sm-2 col-form-label">{{ _("Mail") }}</label>
         <div class="col-sm-10">
-            <input type="text" name="mail" class="form-control" placeholder=" {{ _("Entrer votre mail") }}"/>
+            <input type="email" name="mail" class="form-control" placeholder=" {{ _("Entrer votre mail") }}"/>
         </div>
     </div>
     <br> 
