--- a/env/flask_app/templates/signup.html
+++ b/env/flask_app/templates/signup.html
@@ -23,7 +23,7 @@
     <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="text" name="mail" class="form-control" placeholder="{{ _("Entrer votre email") }} "/>
+            <input type="email" name="mail" class="form-control" placeholder="{{ _("Entrer votre email") }} "/>
             <small id="emailHelp" class="form-text text-muted">{{ share }}</small>
         </div>
     </div>
