--- a/env/flask_app/templates/validation.html
+++ b/env/flask_app/templates/validation.html
@@ -12,7 +12,7 @@
 
 <form action="#" method="post" name="form">
     <div class="mb-3">
-        <label for="titre" class="form-label">{{ _("Veuillez valider le captcha afin de valider votre email") }}</label>
+        <label for="titre" class="form-label">{{ _("Veuillez valider le captcha afin de valider votre email") }} : {{ mail }}</label>
     </div>
     <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Captcha</label>
