modif acheminement mails

--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -47,6 +47,9 @@
                   <a class="nav-link" href="/consultmailsblacklist">{{ _("Consulter mails blacklistés ") }}</a>
                </li> -->
                <li class="nav-item">
+                  <a class="nav-link" href="/consultallmails">{{ _("Consulter mails ") }}</a>
+               </li>
+               <li class="nav-item">
                   <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a>
                </li>
                <li class="nav-item">
