--- a/env/flask_app/templates/consultmailsexp.html
+++ b/env/flask_app/templates/consultmailsexp.html
@@ -35,6 +35,7 @@
             <tr>
                 <th>{{ _("ID mail") }}</th>
                 <th>{{ _("ID postfix") }}</th>
+                <th>{{ _("Acheminer ?") }}</th>
                 <th>{{ _("Supprimer ?") }}</th>
                 <th>Date</th>
                 <th>{{ _("Statut") }}</th>
@@ -42,10 +43,11 @@
         </thead>
         <tbody id='table'>
             {% for mails in lmails %}
-
+            
             <tr id='tr'>
                 <td><input type=hidden id='id'  name='id' value="{{ mails.id }}">{{ mails.id }}</td>
                 <td><input type=hidden id='postfixid'  name='postfixid' value="{{ mails.id_mail_postfix }}">{{ mails.id_mail_postfix }}</td>
+                <td id="ach"><input type=checkbox id='ach' name='ach' ></input></td>
                 <td id="sup"><input type=checkbox id='sup' name='sup' ></input></td>
                 <td><input type=hidden id='date'  name='date' value="{{ mails.date }}">{{ mails.date }}</td>   
                 <td><input type=text id='statut'  name='statut' value={{ _("en attente") }} readonly="readonly" ></td>
@@ -69,18 +71,24 @@
         // null],
     });
     
-        function relo(){
+    function relo(){
         $('#table').find('tbody tr').each(function(){
-            $input = $(this).find('input[type=checkbox]')
+            $input = $(this).find('input[type=checkbox][id=sup]')
+            $inp = $(this).find('input[type=checkbox][id=ach]')
             $tr = $(this).find('input[id=statut]')
             if ($input.is(":checked") ){
                 $input.attr('checked', true);
                 supp = "{{_("supprimé")}}"
                 $tr.val(supp);
+            }else if ($inp.is(":checked") ){
+                $inp.attr('checked', true);
+                supp = "{{_("acheminé")}}"
+                $tr.val(supp);
             }else{
                 $input.attr('checked', false);  
-                nsupp = "{{ _("non-supprimé") }}"
-                $tr.val(nsupp)   
+                $inp.attr('checked', false);  
+                nsupp = "{{ _("en attente") }}"
+                $tr.val(nsupp) 
             }
             
         });
