--- a/env/flask_app/templates/consultallmails.html
+++ b/env/flask_app/templates/consultallmails.html
@@ -27,7 +27,7 @@
 <i class="fa fa-info-circle" aria-hidden="true"></i>{{ _("Statut : 1 valide, 2 refuse, 3 en attente") }}
 <br>
 
-<p>{{ _("Liste de mails de") }} {{identifiant}}</p>
+<p>{{ _("Liste de mails de") }} {{mail}}</p>
 
 <form action="#" method="post" name="form">
     <table class="table table-striped" id='table' name='table'>
@@ -38,7 +38,7 @@
                 <th>{{ _("ID postfix") }}</th>
                 <th>{{ _("Acheminer ?") }}</th>
                 <th>{{ _("Supprimer ?") }}</th>
-                <th>Date</th>
+                <th> Date </th>
                 <th>{{ _("Statut") }}</th>
             </tr>
         </thead>
@@ -47,12 +47,12 @@
             {% for exp in expediteurs %}
             {% if exp.id == mails.expediteur_id %}
             <tr id='tr'>
-                <td><button type=button id='sender'  name='sender' value="{{ exp.id }}">{{ exp.mail }}</td>
+                <td><button type=submit id='sender'  name='sender' value="{{ exp.mail }}">{{ exp.mail }}</td>
                     <td><input type=hidden id='id'  name='id' value="{{ mails.id }}">{{ mails.id }}</td>
                     <td><input type=hidden id='postfixid'  name='postfixid' value="{{ mails.id_mail_postfix }}">{{ mails.id_mail_postfix }}</td>
                     <td id="ach"><input type=checkbox id='ach' name='ach' ></input></td>
                     <td id="sup"><input type=checkbox id='sup' name='sup' ></input></td>
-                    <td><input type=hidden id='date'  name='date' value="{{ mails.date }}">{{ mails.date }}</td>   
+                    <td><input type=hidden id='date'  name='date' value="{{ mails.date }}">{{ mails.date }}</td>               
                     <td><input type=text id='statut'  name='statut' value={{ _("en attente") }} readonly="readonly" ></td>
                 </tr>
                 {% endif %}
@@ -96,6 +96,8 @@
                     $tr.val(nsupp) 
                 }
                 
+                
+                
             });
             
             var tab=[]
@@ -113,22 +115,22 @@
             });
             console.log(tab)
             
-            // jQuery.ajax({
-                //     url: '/api/modifmails',
-                //     type: "POST",
-                //     data: JSON.stringify({ paramName: tab }),
-                //     success: function(msg) {
-                    //         console.log(tab)
-                    //     },
-                    //     dataType: 'json'
-                    
-                    // });   
-                }
+            jQuery.ajax({
+                url: '/api/modifmails',
+                type: "POST",
+                data: JSON.stringify({ paramName: tab }),
+                success: function(msg) {
+                    console.log(tab)
+                },
+                dataType: 'json'
                 
-                
-            </script>
-            
-            
-            {% endblock %}
-            
-            
+            });   
+        }
+        
+        
+    </script>
+    
+    
+    {% endblock %}
+    
+    
