--- a/docker/postfix/app/flask_app/templates/base.html
+++ b/docker/postfix/app/flask_app/templates/base.html
@@ -17,7 +17,7 @@
    <meta http-equiv="content-type" content="text/html;charset=utf-8">
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
       <div class="container-fluid">
          <a class="navbar-brand" href="#">Navbar</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                <li class="nav-item">
                   <a class="nav-link" href="/login">{{ _("Se connecter") }}</a>
                </li>
-               <li class="nav-item">
+               <li class="nav-item bg-danger ">
                   <a class="nav-link" href="/logout">{{ _("Se déconnecter") }}</a>
                </li>
                <li class="nav-item">
