--- a/docker/postfix/app/flask_app/templates/stats.html
+++ b/docker/postfix/app/flask_app/templates/stats.html
@@ -81,20 +81,20 @@
         <div class="card text-white bg-success w-100 mb-3">
             <div class="card-body">
               <h5 class="card-title text-center">{{_("Mails acceptés")}}</h5>
-              <h2 class="card-text text-center">{{sd1}}</h2>
+              <h2 class="card-text text-center">{{nbacceptedmails}}</h2>
             </div>
           </div>
           
           <div class="card text-white bg-danger w-100 mb-3">
             <div class="card-body">
               <h5 class="card-title text-center">{{_("Mails rejetés")}}</h5>
-              <h2 class="card-text text-center">{{sd2}}</h2>
+              <h2 class="card-text text-center">{{nbrefusedmails}}</h2>
             </div>
           </div>
           <div class="card text-white bg-warning w-100 mb-3">
             <div class="card-body">
               <h5 class="card-title text-center">{{_("Mails en attente")}}</h5>
-              <h2 class="card-text text-center">{{sd3}}</h2>
+              <h2 class="card-text text-center">{{nbundefinedmails}}</h2>
             </div>
           </div>
     </div>
@@ -127,9 +127,9 @@
 <script>
     let tab = JSON.parse({{tab | tojson }});
     let labels = JSON.parse({{labels | tojson }});
-    let dico1 = JSON.parse({{dico1 | tojson}});
-    let dico2 = JSON.parse({{dico2 | tojson}});
-    let dico3 = JSON.parse({{dico3 | tojson}}); 
+    let listacceptedmails = JSON.parse({{listacceptedmails | tojson}});
+    let listrefusedmails = JSON.parse({{listrefusedmails | tojson}});
+    let listundefinedmails = JSON.parse({{listundefinedmails | tojson}});
     const ctx = document.getElementById('chart').getContext('2d');
     const myChart = new Chart(ctx, {
         type: 'bar',
@@ -198,7 +198,7 @@
                 pointBorderWidth: 1,
                 pointRadius: 1,
                 pointHitRadius: 10,
-                data: dico1
+                data: listacceptedmails
             },{
                 label: '{{_("Mails rejetés")}}',
                 fill: false,
@@ -214,7 +214,7 @@
                 pointBorderWidth: 1,
                 pointRadius: 1,
                 pointHitRadius: 10,
-                data: dico2
+                data: listrefusedmails
             },{
                 label: '{{_("Mails en attente")}}',
                 fill: false,
@@ -230,7 +230,7 @@
                 pointBorderWidth: 1,
                 pointRadius: 1,
                 pointHitRadius: 10,
-                data: dico3
+                data: listundefinedmails
             }],
             
         },
