--- a/docker/postfix/app/flask_app/templates/base.html
+++ b/docker/postfix/app/flask_app/templates/base.html
@@ -62,35 +62,58 @@
    
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-         <a class="navbar-brand" href="/">Home</a>
+         <!-- <a class="navbar-brand" href="/">Home</a> -->
+         <a class="navbar-brand" href="/"><i style="color: orange; transform: rotate(-25deg)" class="fas fa-mail-bulk fa-2x"></i></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                <li class="nav-item">
-                  <a class="nav-link" href="/signup">{{ _("S'inscrire") }}</a>
+                  <!-- <a class="nav-link" href="/signup">{{ _("S'inscrire") }}</a> -->
+                  <a class="nav-link {% if mail is defined and mail != '' %}{% else %}disabled{% endif %}" href="/consultmails"><i class="fas fa-inbox"></i> {{ _("Consulter mails en attente ") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/login">{{ _("Se connecter") }}</a>
+                  <!-- <a class="nav-link" href="/login">{{ _("Se connecter") }}</a> -->
+                  <a class="nav-link {% if mail is defined and mail != '' %}{% else %}disabled{% endif %}" href="/consultmailsblacklist"><i class="fas fa-user-alt-slash"></i> {{ _("Consulter mails blacklistés ") }}</a>
                </li>              
-               <li class="nav-item">
+               <!-- <li class="nav-item">
                   <a class="nav-link" href="/user">{{ _("Espace utilisateur") }}</a>
-               </li> 
+               </li>  -->
                <li class="nav-item">
-                  <a class="nav-link" href="/consultallmails">{{ _("Consulter mails ") }}</a>
+                  <!-- <a class="nav-link" href="/consultallmails">{{ _("Consulter mails ") }}</a> -->
+                  <a class="nav-link {% if mail is defined and mail != '' %}{% else %}disabled{% endif %}" href="/consultallmails"><i class="fas fa-envelope"></i> {{ _("Consulter mails ") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a>
+                  <!-- <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a> -->
+                  <a class="nav-link {% if mail is defined and mail != '' %}{% else %}disabled{% endif %}" href="/consultexp"><i class="fas fa-user-cog"></i> {{ _("Consulter expéditeurs ") }}</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="/stats">{{ _("Consulter statistiques ") }}</a>
                </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/">{{ _("Health Check ") }}</a>
+               </li>
             </ul>
+
             <ul class="navbar-nav">
                <li class="nav-item-right bg-danger active">
                   <a class="nav-link" href="/logout">{{ _("Se déconnecter") }}</a>
+                  {% if mail is defined and mail != '' %}
                </li>
+               <li class="nav-item-right"><a href="/user" class="nav-link">{{ mail }}</a>
+               </li>
+               <li class="nav-item-right active">
+                  <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> {{ _("Se déconnecter") }}</a>
+               </li>
+               {% else %}
+               <li class="nav-item">
+                  <a class="nav-link" href="/signup"><i class="fas fa-user-plus"></i> {{ _("S'inscrire") }}</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> {{ _("Se connecter") }}</a>
+               </li>
+               {% endif %}
             </ul>
          </div>
       </div>
